--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "black>=25.9.0",
     "celery>=5.5.3",
     "channels>=4.3.1",
     "channels-redis>=4.3.0",
     "djangorestframework>=3.16.1",
+    "isort>=6.0.1",
     "redis>=6.4.0",
 ]
