--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,33 @@ readme = "README.md"
 requires-python = "==3.12.6"
 dependencies = [
     "black>=25.9.0",
+    "boto3>=1.40.38",
     "celery>=5.5.3",
     "channels>=4.3.1",
     "channels-redis>=4.3.0",
+    "dj-rest-auth>=7.0.1",
+    "django>=5.2.6",
+    "django-allauth[socialaccount]>=65.11.2",
+    "django-cors-headers>=4.9.0",
+    "django-debug-toolbar>=6.0.0",
+    "django-extensions>=4.1",
+    "django-redis>=6.0.0",
+    "django-soft-delete>=1.0.21",
+    "django-storages>=1.14.6",
     "djangorestframework>=3.16.1",
+    "djangorestframework-camel-case>=1.4.2",
+    "djangorestframework-simplejwt>=5.5.1",
+    "drf-spectacular>=0.28.0",
+    "gunicorn>=23.0.0",
     "isort>=6.0.1",
+    "pillow>=11.3.0",
+    "psycopg2>=2.9.10",
+    "python-dotenv>=1.1.1",
     "redis>=6.4.0",
+]
+
+[dependency-groups]
+dev = [
+    "coverage>=7.10.7",
+    "decouple>=0.0.7",
 ]
