--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "celery>=5.5.3",
     "channels>=4.3.1",
     "channels-redis>=4.3.0",
+    "daphne>=4.2.1",
     "dj-rest-auth>=7.0.1",
     "django>=5.2.6",
     "django-allauth[socialaccount]>=65.11.2",
