--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "isort>=6.0.1",
     "pillow>=11.3.0",
     "psycopg2>=2.9.10",
+    "python-decouple>=3.8",
     "python-dotenv>=1.1.1",
     "redis>=6.4.0",
 ]
@@ -35,5 +36,4 @@ dependencies = [
 [dependency-groups]
 dev = [
     "coverage>=7.10.7",
-    "decouple>=0.0.7",
 ]
