--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,29 +88,29 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/gather-grow-nginx:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/gather-grow-nginx:buildcache,mode=max
 
-      # 10. Deploy to Server
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            # Clean up old images
-            docker image prune -a --filter "until=24h"
-            
-            # Navigate to app directory
-            cd app
-            
-            # Pull latest images
-            docker pull ${{ secrets.DOCKER_USERNAME }}/gather-grow:latest
-            docker pull ${{ secrets.DOCKER_USERNAME }}/gather-grow-nginx:latest
-            
-            # Update and restart services
-            docker-compose --env-file .envs/.prod.env up -d --build
-            
-            # Show running containers
-            docker ps
+      # 10. Deploy to Server (서버 준비 후 주석 해제)
+      # - name: Deploy to Server
+      #   uses: appleboy/ssh-action@master
+      #   with:
+      #     host: ${{ secrets.SERVER_HOST }}
+      #     username: ${{ secrets.SERVER_USER }}
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     script: |
+      #       # Clean up old images
+      #       docker image prune -a --filter "until=24h"
+      #       
+      #       # Navigate to app directory
+      #       cd app
+      #       
+      #       # Pull latest images
+      #       docker pull ${{ secrets.DOCKER_USERNAME }}/gather-grow:latest
+      #       docker pull ${{ secrets.DOCKER_USERNAME }}/gather-grow-nginx:latest
+      #       
+      #       # Update and restart services
+      #       docker-compose --env-file .envs/.prod.env up -d --build
+      #       
+      #       # Show running containers
+      #       docker ps
 
       # 11. Notify deployment status
       - name: Send deployment notification
