--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,4 +36,33 @@ dependencies = [
 [dependency-groups]
 dev = [
     "coverage>=7.10.7",
+    "pytest>=8.3.0",
+    "pytest-django>=4.9.0",
+    "pytest-cov>=5.0.0",
+]
+
+[tool.black]
+line-length = 120
+target-version = ['py312']
+
+[tool.isort]
+profile = "black"
+line_length = 100
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "config.settings.dev"
+python_files = ["tests.py", "test_*.py", "*_tests.py"]
+testpaths = ["apps"]
+python_classes = ["*TestCase", "*Tests"]
+python_functions = ["test_*"]
+addopts = [
+    "--verbose",
+    "--strict-markers",
+    "--tb=short",
+    "--nomigrations",
+    "--reuse-db",
+]
+filterwarnings = [
+    "ignore::django.utils.deprecation.RemovedInDjango60Warning",
+    "ignore::django.utils.deprecation.RemovedInDjango61Warning"
 ]
