:see_no_evil: 테스트용 HTML 파일 gitignore에 추가

--- a/.gitignore
+++ b/.gitignore
@@ -397,4 +397,7 @@ pyrightconfig.json
 
 *.rdb
 
+# Test files
+test_chat.html
+
 # End of https://www.toptal.com/developers/gitignore/api/python,django,pycharm,redis,git
